add useful endpoints for managing destinations, and deleting airport and tasks
